@@ -252,7 +252,7 @@ from twisted.application import service
 from buildbot.slave.bot import BuildSlave
 
 basedir = r'%(basedir)s'
-host = '%(host)s'
+buildmaster_host = '%(host)s'
 port = %(port)d
 slavename = '%(name)s'
 passwd = '%(passwd)s'
@@ -261,8 +261,8 @@ usepty = %(usepty)d
 umask = %(umask)s
 
 application = service.Application('buildslave')
-s = BuildSlave(host, port, slavename, passwd, basedir, keepalive, usepty,
-               umask=umask)
+s = BuildSlave(buildmaster_host, port, slavename, passwd, basedir,
+               keepalive, usepty, umask=umask)
 s.setServiceParent(application)
 
 """
